# customAssembly

./: .gitignore  CMakeLists.txt  README.md  TODO  autorun  autotest  input.txt  main.cpp
includes/: assembly.h  assemblytypes.h  textlib.h  virtualmachine_tools.h
source/: assembly_translator.cpp  compiler.cpp  text_src.cpp  token_src.cpp  virtualmachine.cpp  virtualmachine_tools.cpp
